repairs broken style rule for testimonials territory header

--- a/support-frontend/assets/pages/aus-moment-map/ausMomentMap.scss
+++ b/support-frontend/assets/pages/aus-moment-map/ausMomentMap.scss
@@ -501,6 +501,8 @@ span.selected-territory {
   @include mq($from:desktop) {
     padding: 12px 0 20px 0;
     border-bottom: none;
+    position: sticky;
+    top: 0;
   }
 }
 
